ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - $(HOST).$(DOMAIN)
    secretName: $(HOST)-tls
  rules:
  - host: $(HOST).$(DOMAIN)
    http:
      paths:
        - path: /
          backend:
            serviceName: app
            servicePort: 80
